Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105617

FFMPEG: Video and audio are not synchronized after changing playback rate

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.3.1
    • Multimedia
    • None

    Description

      Steps:

      1. Set ffmpeg backend

      2. Open examples\multimedia\video\mediaplayer

      3. Open any video with audio

      4. Change the playback rate

       

      ER: Audio and video are synchronized

      AR: They are not

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artemiy Artem Dyomin
            artemiy Artem Dyomin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes