Fix audio and video synchronization with ffmpeg backend

Set a correct output playback rate to the audio resampler.
The functionality will be tested after implementation mocks of audio output.

Task-number: QTBUG-105617
Change-Id: Iaed95ac12e5e75b55b2c09245aad45c32a885fdf
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 5393dae58ed62ec765abfb846dcd33a7b2aaaac6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>